--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,52 @@ body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  #AppBar {
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+    .GraphTitle {
+      text-decoration: underline;
+    }
+    .GraphFiltering {
+      display: flex;
+      align-items: center;
+      .ClearFilters {
+        padding: 4px;
+      }
+      .loading {
+        font-size: 14px;
+        font-style: italic;
+        width: 100px;
+        opacity: 1;
+        transition: opacity 1s;
+        &.hidden {
+          opacity: 0
+        }
+        &:after {
+          overflow: hidden;
+          display: inline-block;
+          vertical-align: bottom;
+          -webkit-animation: ellipsis steps(4,end) 900ms infinite;
+          animation: ellipsis steps(4,end) 900ms infinite;
+          content: "\2026"; /* ascii code for the ellipsis character */
+          width: 0px;
+        }
+        @keyframes ellipsis {
+          to {
+            width: 1.25em;
+          }
+        }
+        @-webkit-keyframes ellipsis {
+          to {
+            width: 1.25em;
+          }
+        }
+      }
+    }
+  }
   #ChartContainer {
     width: 100%;
     height: 65%;
