--- a/src/style.scss
+++ b/src/style.scss
@@ -18,11 +18,17 @@ body {
     align-items: center;
     font-size: 16px;
     .GraphTitle {
-      text-decoration: underline;
+      //text-decoration: underline;
+      font-weight: bold;
     }
     .GraphFiltering {
       display: flex;
       align-items: center;
+      #FilteringInstructions {
+        font-size: 10.75px;
+        line-height: 12px;
+        width: 320px;
+      }
       .ClearFilters {
         padding: 4px;
       }
@@ -64,5 +70,23 @@ body {
   #TableContainer {
     width: 100%;
     height: 35%;
+    .ReactTable .rt-thead {
+      overflow-y: scroll;
+      .rt-tr .rt-th {
+        &:nth-of-type(1), &:nth-of-type(3), &:nth-of-type(5), &:nth-of-type(7), &:nth-of-type(8){
+          font-weight: bold;
+        }
+        &:nth-of-type(2), &:nth-of-type(4), &:nth-of-type(6) {
+          font-style: italic;
+        }
+      }
+    }
+    .cellValue {
+      margin-bottom: 1px;
+      &:not(:last-child) {
+        padding-bottom: 2px;
+        border-bottom: 1px solid #e6e6e6;
+      }
+    }
   }
 }
